# django-portfolio

./: .gitignore  Makefile  db.sqlite3  pyproject.toml
blog/: models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_rename_project_blog.py  0003_rename_data_blog_date.py  0004_blog_photo.py
blog/templates/blog/: all_blog.html  detail.html
portfol/: models.py  views.py
portfol/migrations/: 0001_initial.py
portfol/templates/portfol/: base.html  index.html
portfolio/: - poetry  shell - python  manage.py runserver  settings.py  urls.py
