[tool.poetry]
name = "portfolio"
version = "0.1.0"
description = ""
authors = ["Barzabel <kochenko1995@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.1.1"
Pillow = "^9.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
